# Project

Aquarium/: .gitignore  Doxyfile.doxy  Step2.sln  aquarium.aqua
Aquarium/Step2/: Aquarium.cpp  Aquarium.h  ChildView.cpp  ChildView.h  DecorTreasure.cpp  DecorTreasure.h  Environment.cpp  Environment.h  Fish.cpp  Fish.h  FishBeta.cpp  FishBeta.h  FishCat.cpp  FishCat.h  FishDory.cpp  FishDory.h  FishNemo.cpp  FishNemo.h  IsFish.cpp  IsFish.h  IsPredator.cpp  IsPredator.h  IsPrey.cpp  IsPrey.h  Item.cpp  Item.h  ItemVisitor.cpp  ItemVisitor.h  MainFrm.cpp  Predator.cpp  Predator.h  Prey.cpp  Prey.h  ReadMe.txt  Score.cpp  Score.h  Step2.cpp  Step2.h  Step2.rc  Step2.vcxproj  (+3 more)
CanadianExperience/: CanadianExperience.sln  Presentation.anim  README.txt
CanadianExperience/CanadianExperience/: ActiveParticleList.cpp  ActiveParticleList.h  Actor.cpp  Actor.h  AnimChannelAngle.cpp  (+37 more)
Elevator/: Doxyfile.doxy  Elevator.sln  README.txt
Twitch.tv-Smart-Ads-Comment-Ranking/: MaxMainProcess
Twitch.tv-Smart-Ads-Comment-Ranking/Audio2Text/: CMakeLists.txt  Exception.hpp  Twitch.cpp  Twitch.hpp  TwitchStream.cpp  TwitchStream.hpp  TwitchStreamChunk.cpp  TwitchStreamChunk.hpp  TwitchStreamChunkFactory.cpp  TwitchStreamChunkFactory.hpp  TwitchStreamFactory.cpp  TwitchStreamFactory.hpp  TwitchStreamPlaylist.cpp  TwitchStreamPlaylist.hpp  TwitchStreamPlaylistFactory.cpp  TwitchStreamPlaylistFactory.hpp  Utilities.cpp  Utilities.hpp  main.cpp  prefix.hpp
Twitch.tv-Smart-Ads-Comment-Ranking/Audio2Text/cmake_modules/: FindFFMPEG.cmake  cotire.cmake
Twitch.tv-Smart-Ads-Comment-Ranking/Audio2Text/dependencies/: CMakeLists.txt
WebPage/: README.txt
(+85 files in other folders)
